fixed shop by brand logos on home page and fixed spacing on top of pages on all pages

--- a/src/pages/contactus/contactus.css
+++ b/src/pages/contactus/contactus.css
@@ -2,7 +2,6 @@
     max-width: 1200px;
     margin: 0 auto;
     padding: 2rem;
-    margin-top: 4rem;
     margin-bottom: 4rem;
     background-color: #2b2b2b;
     color: white;
