--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -1,7 +1,7 @@
 .home-container {
-    padding-top: var(--header-height); /* Use the navbar height variable */
-    margin-top: 3rem;
-    padding: 40px;
+    padding-top: 0; /* Use the navbar height variable */
+    margin-top: 0;
+    padding: 20px;
 }
 
 .carousel {
@@ -92,7 +92,8 @@
 
 .brand-section {
     padding: 40px 20px;
-    margin-top: 40px;
+    margin-top: 20px;
+    margin-bottom: -10px;
     background-color: white;
 }
 
@@ -100,20 +101,22 @@
     text-align: center;
     color: #333;
     font-size: 2.5rem;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
+    margin-top: -20px;
     font-weight: bold;
 }
 
 .brand-container {
-    display: flex;
-    justify-content: center;
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    justify-items: center;
     align-items: center;
-    flex-wrap: wrap;
-    gap: 7rem;
+    gap: 2rem;
     max-width: 1200px;
     margin: 0 auto;
-    margin-bottom: 5rem;
+    padding: 2rem;
 }
+
 
 .brand-link {
     display: block;
@@ -133,7 +136,16 @@
 /* Responsive adjustments */
 @media (max-width: 768px) {
     .brand-container {
-        gap: 20px;
+        gap: 1.5rem;
+        grid-template-columns: 1fr;
+        padding: 1rem;
+        justify-items: center;
+        justify-content: center;
+    }
+
+    .brand-link {
+        width: 80%;
+        margin: 0 auto;
     }
     
     .brand-logo {
